# gammon

.github/workflows/: pages.yml  windows.yml
source/gammon-lib/: Cargo.toml
source/gammon-lib/src/: lib.rs
source/gammon-lib/src/interface/: mod.rs
source/gammon-lib/src/interface/general/: mod.rs
source/gammon-lib/src/interface/proto/: mod.rs
source/gammon-lib/src/interface/proto/gamestand/: mod.rs  v1.rs
source/gammon-lib/src/interface/proto/poslocal/: mod.rs
source/gammon-lib/src/interface/proto/posserver/: mod.rs
source/gammon-lib/src/interface/transaction/: mod.rs  v1.rs
source/gammon-site/: api.html  api_en.html  index.html  index_en.html  style.css
source/gammon-windows/: Cargo.toml
source/gammon-windows/.cargo/: config.toml
