[package]
name = "gammon-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
bytes = "1"
url = "2"
good-ormning-runtime = { version = "0.1", features = ["sqlite", "chrono"] }
