[package]
name = "arcade_windows"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
native-windows-derive = "1"
native-windows-gui = "1"
gammon-lib = { path = "../gammon-lib" }
tokio = { version = "1", features = ["sync", "net", "rt", "macros"] }
tokio-stream = { version = "0.1", features = ["net", "signal"] }
htwrap = "0.10"
serde = "1"
serde_json = "1"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["server-auto"] }
loga = "0.5.2"
flowcontrol = "0.2.3"
